<resources>
    <string name="app_version">Version</string>
    <string name="developer_email">jmatiaslopezm@gmail.com</string>
    <string name="copyright">Copyright © 2017. \nAll right reserved</string>
    <string name="app_name">PromoFire</string>
    <string name="version_unknown">Unknown</string>
    <string name="msg_copied_clipboard">Texto copiado.</string>
    <string name="title_about">Acerca de</string>
    <string name="content_about">Markeet is an online store that sells various types of products, such as clothes, mobile phones, home appliances, and other products. Excellent product quality and competitive prices.
        \n\nThis application is just a demo of the items on Envato</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Iniciar</string>
    <string name="action_sign_in_short">Ingresar</string>
    <string name="error_invalid_email">El email es inválido</string>
    <string name="error_invalid_password">El password es muy corto</string>
    <string name="error_incorrect_password">La contraseña es incorrecta</string>
    <string name="error_field_required">Campo Requerido</string>
    <string name="permission_rationale">"Es necesario ingresar email y contraseña"
    </string>
    <string name="action_settings">Settings</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam efficitur ipsum in placerat molestie. Fusce quis mauris a enim sollicitudin ultrices non eget velit. Aliquam eu pulvinar enim. Praesent libero nisl, ultricies vel maximus eu, maximus et nisi. Phasellus pharetra nec ligula vitae mollis. Quisque porttitor ornare magna, quis dignissim libero aliquam id. Donec sollicitudin ultrices ante, a semper erat tristique in. Vivamus sodales in ligula at sodales. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nulla tempus bibendum nibh, ac tincidunt quam convallis non. Proin dolor nunc, egestas et tortor consequat, dignissim lacinia odio. Ut ut aliquet erat.  Ut non scelerisque elit. Morbi dolor neque, iaculis eu justo rutrum, aliquet dictum mauris. Phasellus quis massa ut ligula feugiat congue a et dolor. Etiam a dui a sapien ornare accumsan ac ut lorem. Suspendisse vehicula lorem dapibus nibh rhoncus ultricies. Proin sem nulla, elementum quis pharetra quis, commodo vitae nisi. Donec urna orci, posuere et iaculis sit amet, fringilla quis sapien. Pellentesque nec posuere felis. Praesent malesuada tellus nisi, non dictum justo interdum eget. Quisque mollis euismod libero, non aliquam lorem interdum vitae. Aliquam vehicula efficitur purus eget rutrum. Sed pulvinar fermentum risus ac viverra. Cras laoreet ligula quam, ac lacinia nisl elementum in. Aenean velit arcu, euismod a venenatis non, pulvinar pulvinar massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam efficitur ipsum in placerat molestie. Fusce quis mauris a enim sollicitudin ultrices non eget velit. Aliquam eu pulvinar enim. Praesent libero nisl, ultricies vel maximus eu, maximus et nisi. Phasellus pharetra nec ligula vitae mollis. Quisque porttitor ornare magna, quis dignissim libero aliquam id. Donec sollicitudin ultrices ante, a semper erat tristique in. Vivamus sodales in ligula at sodales. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nulla tempus bibendum nibh, ac tincidunt quam convallis non. Proin dolor nunc, egestas et tortor consequat, dignissim lacinia odio. Ut ut aliquet erat.  Ut non scelerisque elit. Morbi dolor neque, iaculis eu justo rutrum, aliquet dictum mauris. Phasellus quis massa ut ligula feugiat congue a et dolor. Etiam a dui a sapien ornare accumsan ac ut lorem. Suspendisse vehicula lorem dapibus nibh rhoncus ultricies. Proin sem nulla, elementum quis pharetra quis, commodo vitae nisi. Donec urna orci, posuere et iaculis sit amet, fringilla quis sapien. Pellentesque nec posuere felis. Praesent malesuada tellus nisi, non dictum justo interdum eget. Quisque mollis euismod libero, non aliquam lorem interdum vitae. Aliquam vehicula efficitur purus eget rutrum. Sed pulvinar fermentum risus ac viverra. Cras laoreet ligula quam, ac lacinia nisl elementum in. Aenean velit arcu, euismod a venenatis non, pulvinar pulvinar massa.</string>
    <string name="home">Home</string>
    <string name="favourite">Favourite</string>
    <string name="downloaded">Downloaded</string>
    <string name="more">More</string>
    <string name="settings">Settings</string>
    <string name="logout">Cerrar Sesión</string>
    <string name="promo_fire_frase">Los mejores productos</string>
    <string name="pref_group_notif">NOTIFICATIONS</string>
    <string name="pref_group_others">OTHERS</string>
    <string name="pref_title_notif">Push Notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_title_copyright">Copyright</string>
    <string name="pref_title_dev_email">Developer Email</string>
    <string name="pref_title_build">Build Version</string>
    <string name="pref_title_term">Term &amp; Policies</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="grant_permission_storage">Grant storage permission to enable</string>
    <string name="content_term">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed dolor risus, aliquet a erat quis, viverra molestie orci. Suspendisse vehicula porta libero. Nam tincidunt nulla ipsum, vel iaculis risus scelerisque sed. Phasellus venenatis, enim vel placerat blandit, leo eros bibendum erat, at auctor mauris diam ac risus. Aenean sit amet congue neque, sit amet condimentum elit. Fusce lacinia massa vel nisl scelerisque, in scelerisque dolor elementum. Vivamus leo enim, congue dictum congue vitae, porttitor id purus. Sed eu ultricies erat. Morbi hendrerit, mi ac volutpat commodo, magna turpis pretium nibh, at fringilla eros lorem quis tellus. Praesent porttitor purus nibh, ac vestibulum massa fringilla vel. Pellentesque dapibus nulla quis luctus dictum. In scelerisque ut ex sed facilisis. Nunc eu finibus nulla, ut hendrerit sem. Suspendisse accumsan risus vel diam fringilla iaculis.
        \n\nQuisque facilisis finibus aliquam. Sed mattis, dui fringilla ornare finibus, orci odio blandit risus, ut maximus dui odio non leo. Donec laoreet lacus nisi, a mollis velit suscipit ac. Quisque faucibus ut nisl in congue. Nam sagittis consectetur tempus. Suspendisse eget posuere dui. Donec ultricies velit ex, vel cursus odio sollicitudin in. Nullam faucibus auctor ligula, eu rhoncus dui facilisis a. Curabitur vel feugiat est. Quisque congue at enim eleifend ultrices. Proin dapibus risus lorem, nec condimentum nunc consequat vitae. Quisque sapien lorem, vestibulum vitae justo eget, fringilla eleifend nisi.
        \n\nMauris ultricies augue sit amet est sollicitudin laoreet. Fusce ut congue felis. Fusce dictum tristique elit nec iaculis. Mauris sodales tempus fringilla. Fusce nec nunc tempus, tempor sapien sit amet, ultricies erat. Mauris ultrices ac lorem ultrices facilisis. Nam pharetra, nisi a imperdiet interdum, nunc justo ultricies nisl, a laoreet massa dui vel enim. Pellentesque et magna ac tellus ullamcorper malesuada a ac nisl. Curabitur id est et neque convallis accumsan. Aliquam eleifend varius massa. Curabitur eu finibus tortor.
        \n\nVivamus aliquam nisl rutrum orci volutpat porta in ornare est. Quisque ligula ipsum, vulputate id aliquam vitae, semper vitae orci. Nam non pulvinar ligula, eget tincidunt ante. Quisque sapien massa, varius tempus pretium id, vehicula at magna. Ut ut ultrices augue. Nam nec ullamcorper tellus, at finibus lectus. Fusce vel iaculis mauris, id porta nulla. Aenean ac mollis sapien. Morbi imperdiet augue tempus nulla luctus, sit amet feugiat purus elementum.
    </string>
    <string name="failed_text">Failed When Load Data</string>
    <string name="no_internet_text">No Internet Connection</string>
    <string name="no_item">No Item</string>
    <string name="msg_data_loaded">Data loaded</string>
    <string name="msg_failed_load_data">Failed when load data</string>
    <string name="title_delete_confirm">Delete Confirmation</string>
    <string name="content_delete_confirm">Are you sure want to delete all&#160;</string>
    <string name="delete_success">Eliminado Correctamente</string>
    <string name="failed">Fallo</string>
    <string name="OK">OK</string>
    <string name="GOT_IT">GOT IT</string>
    <string name="YES">SI</string>
    <string name="NO">NO</string>
    <string name="SETTING">SETTING</string>
    <string name="CANCEL">CANCELAR</string>
    <string name="CLOSE">CERRAR</string>
    <string name="UPDATE">ACTUALIZAR</string>
    <string name="DISMISS">DISMISS</string>
    <string name="HIDE">OCULTAR</string>
    <string name="RETRY">INTENTAR</string>
    <string name="TRY_AGAIN">INTENTAR DE NUEVO</string>
    <string name="DETAILS">DETAILS</string>
    <string name="FAILED">FAILED</string>
    <string name="TYPE_SEARCH">BUSCAR</string>
    <string name="NO_IMAGE">SIN IMAGEN</string>
    <string name="DELETE">BORRAR</string>
    <string name="OPEN">ABRIR</string>
    <string name="SAVE">GUARDAR</string>
    <string name="NEXT">SIGUIENTE</string>
    <string name="SKIP">PASAR</string>
    <string name="title_notif_details">Notification Details</string>
    <string name="title_notif">Notification</string>
    <string name="title_what_news">What\'s News</string>
    <string name="title_category">Categories</string>
    <string name="image_of">%1$d of %2$d</string>
    <string name="press_again_exit_app">Presione de Vuelta para salir</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="str_nav_shopping_cart">Shopping Cart</string>
    <string name="str_nav_wishlist">Wishlist</string>
    <string name="str_nav_history">Order History</string>
    <string name="str_nav_news">News Info</string>
    <string name="str_nav_notifications">Notifications</string>
    <string name="sub_title_nav_others">Others</string>
    <string name="str_nav_instruction">Instruction</string>
    <string name="str_nav_setting">Settings</string>
    <string name="str_nav_rate">Calificar</string>
    <string name="str_nav_about">Acerca de </string>
    <string name="str_nav_login">Loguearse </string>
    <string name="please_wait_text">Please wait until data loaded</string>
    <string name="categories_product">Categories :&#160;</string>
    <string name="cannot_add_wishlist">cannot add to wishlist</string>
    <string name="add_wishlist">Add to wishlist</string>
    <string name="remove_wishlist">Remove from wishlist</string>
    <string name="add_cart">Add to shopping cart</string>
    <string name="remove_cart">Remove from shopping cart</string>
    <string name="msg_out_of_stock">Ops, Product out of stock</string>
    <string name="msg_suspend">Ops, Product is suspend</string>
    <string name="out_of_stock">OUT OF STOCK</string>
    <string name="suspend">SUSPEND</string>
    <string name="ready_stock">READY STOCK</string>
    <string name="bt_add_cart">ADD TO CART</string>
    <string name="bt_remove_cart">REMOVE FROM CART</string>
    <string name="title_menu_search">Search</string>
    <string name="str_nav_categoria">Categoría</string>
    <string name="str_nav_lista_deseos">Lista de Deseos</string>
    <string name="str_nav_notificaciones">Notificaciones</string>
    <string name="str_nav_recomendaciones">Recomendaciones</string>
    <string name="str_nav_promo_valoracion">Promociones Según Su Valoración</string>
    <string name="str_nav_promo_categoria">Promoción por Categoría</string>
    <string name="str_nav_promo_fecha">Promociones por Fecha</string>
</resources>