<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_categoria"
            android:icon="@drawable/ic_cart"
            android:title="@string/str_nav_categoria"
            app:actionLayout="@layout/menu_counter_plain_" />
        <item
            android:id="@+id/nav_recomendaciones"
            android:icon="@drawable/ic_cart"
            android:title="@string/str_nav_recomendaciones"
            app:actionLayout="@layout/menu_counter_plain_" />
        <item
            android:id="@+id/nav_promo_valoracion"
            android:icon="@drawable/ic_cart"
            android:title="@string/str_nav_promo_valoracion"
            app:actionLayout="@layout/menu_counter_plain_" />
        <item
            android:id="@+id/nav_promo_categoria"
            android:icon="@drawable/ic_cart"
            android:title="@string/str_nav_promo_categoria"
            app:actionLayout="@layout/menu_counter_plain_" />
        <item
            android:id="@+id/nav_wish"
            android:icon="@drawable/ic_nav_wish"
            android:title="@string/str_nav_lista_deseos"
            app:actionLayout="@layout/menu_counter_plain_" />

        <item
            android:id="@+id/nav_notif"
            android:icon="@drawable/ic_nav_notifications"
            android:title="@string/str_nav_notificaciones"
            app:actionLayout="@layout/menu_dot_sign" />

        <item
            android:id="@+id/nav_promo_fecha"
            android:icon="@drawable/ic_cart"
            android:title="@string/str_nav_promo_fecha"
            app:actionLayout="@layout/menu_counter_plain_" />


        <!--item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_nav_history"
            android:title="@string/str_nav_history" />

        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_nav_news"
            android:title="@string/str_nav_news" /-->




    </group>
    <item android:title="@string/sub_title_nav_others">
        <menu>

            <!--item
                android:id="@+id/nav_instruction"
                android:icon="@drawable/ic_nav_instruction"
                android:title="@string/str_nav_instruction" />

            <item
                android:id="@+id/nav_setting"
                android:icon="@drawable/ic_nav_settings"
                android:title="@string/str_nav_setting" /-->

            <item
                android:id="@+id/nav_login"
                android:icon="@drawable/ic_nav_rate"
                android:title="@string/str_nav_login" />

            <item
                android:id="@+id/nav_rate"
                android:icon="@drawable/ic_nav_rate"
                android:title="@string/str_nav_rate" />

            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_nav_about"
                android:title="@string/str_nav_about" />
        </menu>
    </item>

</menu>
